[cleanup] Atomic inline can never be out-of-flow positioned (blockification) https://bugs.webkit.org/show_bug.cgi?id=300203

Reviewed by Antti Koivisto.

Replace isBlockLevelReplacedOrAtomicInline with isReplaced, since an out-of-flow box can only be block-level, never inline.

* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::computeOutOfFlowPositionedLogicalWidth const):
(WebCore::RenderBox::computeOutOfFlowPositionedLogicalHeight const):
(WebCore::RenderBox::computeReplacedOutOfFlowPositionedLogicalWidth const): Deleted.
(WebCore::RenderBox::computeReplacedOutOfFlowPositionedLogicalHeight const): Deleted.
* Source/WebCore/rendering/RenderBox.h:
* Source/WebCore/rendering/RenderReplaced.cpp:
(WebCore::RenderReplaced::paint):
* Source/WebCore/rendering/RenderReplaced.h:

Canonical link: https://commits.webkit.org/301086@main