Source/WebCore/rendering/RenderBox.cpp
@@ -4387,10 +4387,8 @@ void RenderBox::computeOutOfFlowPositionedLogicalWidth(LogicalExtentComputedValu
 {
     ASSERT(isOutOfFlowPositioned());
 
-    if (isBlockLevelReplacedOrAtomicInline()) {
-        computeReplacedOutOfFlowPositionedLogicalWidth(computedValues);
-        return;
-    }
+    if (CheckedPtr replaced = dynamicDowncast<RenderReplaced>(this))
+        return replaced->computeReplacedOutOfFlowPositionedLogicalWidth(computedValues);
 
     // QUESTIONS
     // FIXME 1: Should we still deal with these the cases of 'left' or 'right' having
@@ -4543,10 +4541,8 @@ void RenderBox::computeOutOfFlowPositionedLogicalHeight(LogicalExtentComputedVal
 {
     ASSERT(isOutOfFlowPositioned());
 
-    if (isBlockLevelReplacedOrAtomicInline()) {
-        computeReplacedOutOfFlowPositionedLogicalHeight(computedValues);
-        return;
-    }
+    if (CheckedPtr replaced = dynamicDowncast<RenderReplaced>(this))
+        return replaced->computeReplacedOutOfFlowPositionedLogicalHeight(computedValues);
 
     PositionedLayoutConstraints blockConstraints(*this, LogicalBoxAxis::Block);
     blockConstraints.computeInsets();
@@ -4659,34 +4655,6 @@ LayoutUnit RenderBox::computeOutOfFlowPositionedLogicalHeightUsing(const Style::
     if (logicalHeight.isIntrinsic())
         return adjustContentBoxLogicalHeightForBoxSizing(computeIntrinsicLogicalContentHeightUsing(logicalHeight, contentLogicalHeight, blockConstraints.bordersPlusPadding()).value_or(0_lu));
     return adjustContentBoxLogicalHeightForBoxSizing(Style::evaluate<LayoutUnit>(logicalHeight, blockConstraints.containingSize(), Style::ZoomNeeded { }));
-}
-
-void RenderBox::computeReplacedOutOfFlowPositionedLogicalWidth(LogicalExtentComputedValues& computedValues) const
-{
-    PositionedLayoutConstraints inlineConstraints(*this, LogicalBoxAxis::Inline);
-    inlineConstraints.computeInsets();
-
-    // NOTE: This value of width is final in that the min/max width calculations
-    // are dealt with in computeReplacedWidth(). This means that the steps to produce
-    // correct max/min in the non-replaced version, are not necessary.
-    computedValues.m_extent = computeReplacedLogicalWidth() + borderAndPaddingLogicalWidth();
-
-    inlineConstraints.resolvePosition(computedValues);
-    inlineConstraints.fixupLogicalLeftPosition(computedValues);
-}
-
-void RenderBox::computeReplacedOutOfFlowPositionedLogicalHeight(LogicalExtentComputedValues& computedValues) const
-{
-    PositionedLayoutConstraints blockConstraints(*this, LogicalBoxAxis::Block);
-    blockConstraints.computeInsets();
-
-    // NOTE: This value of height is final in that the min/max height calculations
-    // are dealt with in computeReplacedHeight(). This means that the steps to produce
-    // correct max/min in the non-replaced version, are not necessary.
-    computedValues.m_extent = computeReplacedLogicalHeight() + borderAndPaddingLogicalHeight();
-
-    blockConstraints.resolvePosition(computedValues);
-    blockConstraints.adjustLogicalTopWithLogicalHeightIfNeeded(computedValues);
 }
 
 PositionWithAffinity RenderBox::positionForPoint(const LayoutPoint& point, HitTestSource source, const RenderFragmentContainer* fragment)
